--- a/otherdemo/src/main/resources/application.properties
+++ b/otherdemo/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #-- SERVER --#
-server.port=8080
+server.port=8081
 
 #-- NAME --#
-spring.application.name=demo
+spring.application.name=otherdemo
 
 #-- DATASOURCE --#
-spring.datasource.url=jdbc:postgresql://localhost:5432/demo
+spring.datasource.url=jdbc:postgresql://localhost:5432/otherdemo
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
